--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:            jekyllDecent
+title:            Nistara Randhawa
 subtitle:         Example Blog
 description:      This is the jekyllTheme example blog. It only exists to demonstrate how the theme looks and feels.
 keywords:         demo theme example github jekyll features
@@ -16,7 +16,7 @@ baseurl:          "/jekyllDecent" # the subpath of your site, e.g. /blog
 url:              "nistara.net" # the base hostname & protocol for your site. Have a look at robots.txt as well!
 permalink:        /blog/:categories/:title
 cover:            /assets/mountain-cover.jpg
-disqus_shortname: "jekylldecent"
+disqus_shortname: 
 
 # Build settings
 markdown: kramdown
